# DataQualityAndValidation

./: README.md  pyproject.toml  requirements.txt
00.no_tool/: manual_data_validation.ipynb
01.pandas_profiling/: 01_Census_income_profilling.ipynb
02.great_expectations_validation/: 1.Generate_project_with_CLI.md  2.Generate_project_with_python_api.ipynb  4.Profile_generate_validation_rules.ipynb  5.Build_and_run_check_point.ipynb  6.great_expectations_spark.ipynb  README.md  Tutorial_1.md  Tutorial_2.ipynb  Tutorial_3.ipynb  run_check_point.ipynb
02.great_expectations_validation/great_expectations/: great_expectations.yml
03.TDDA/: Tdda_example1.ipynb  Tdda_tutorial1.ipynb
03.TDDA/tdda_refs/: generated_constraints.tdda  my_constraints.tdda
04.Bulwark/: Bulwark_example1.ipynb
05.voluptuous/: voluptuous_example1.ipynb
06.Deequ/: README.md  deequ_example1.ipynb
07.DBT/dbt_data_validation/: README.md  dbt_project.yml
09.TFDV/: TFDV_example1.ipynb
data/: adult.csv  adult_cleaned.csv  adult_with_duplicates.csv
demo/00.data_profiling/: Census_income_profilling.ipynb
demo/01.no_tool/: data_validation_demo.ipynb
demo/02.tdda/: tdda_validation_demo.ipynb
demo/03.GE/: ge_validation_demo.ipynb
demo/04.TFDV/: TFDV_demo.ipynb
demo/casd_dm/: data_validation.ipynb
docs/: data_quality_management.md  data_validation_tool_evaluation.md
great_expectations_validation/: README.md  Tutorial_1.md  Tutorial_2.ipynb  run_check_point.ipynb
pandas_profiling/: 03_Profilling_with_expectation_integration.ipynb  Census_income_profilling.ipynb
(+28 files in other folders)
