[tool.poetry]
name = "dataqualityandvalidation"
version = "0.1.0"
description = ""
authors = ["Pengfei Liu <liu.pengfei@hotmail.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pandas = "^1.3.5"
pandas-profiling = "^3.1.0"
great-expectations = "^0.14.1"
tdda = "^1.0.35"
bulwark = "^0.6.1"
dbt-core = "^1.0.1"
dbt-postgres = "^1.0.1"
voluptuous = "^0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
